# tree-sitter-kanata

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.test  tree-sitter.json
bindings/c/: tree-sitter-kanata.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kanata/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKanata/: kanata.h
bindings/swift/TreeSitterkanataTests/: TreeSitterkanataTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: tests.txt
