[package]
name = "tree-sitter-kanata"
description = "Tree-sitter grammar for kanata"
version = "0.1.0"
authors = ["postsolar"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kanata"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/postsolar/tree-sitter-kanata"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
